--- a/lesson3.html
+++ b/lesson3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Learning</title>
+    <title>Lesson 3: Pronunciation and Intonation</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,13 +16,10 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Here you can find all of our English Lessons</h1>
-    <p>All lessons are intended to help you with your English exams.</p>
-    <h1>Lessons</h1>
-    <ul>
-        <li><a href="lesson1.html">Lesson 1: Basic English Grammar</a></li>
-        <li><a href="lesson2.html">Lesson 2: Vocabulary and Phrases</a></li>
-        <li><a href="lesson3.html">Lesson 3: Pronunciation and Intonation</a></li>
-    </ul>
+    <h1>Lesson 3: Pronunciation and Intonation</h1>
+    <p>In this lesson, we will focus on the pronunciation and intonation patterns in English.</p>
+    <p><strong>Source:</strong> [Provide the source if the content is not original]</p>
+    <a href="exercise3.html">Go to Exercise 3</a>
+    <a href="game3.html">Go to Game 3</a>
 </body>
 </html>
