Add lesson pages and link them from the lessons page

--- a/lessons.html
+++ b/lessons.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Learning</title>
+    <title>Lessons - English Learning</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,8 +16,6 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Here you can find all of our English Lessons</h1>
-    <p>All lessons are intended to help you with your English exams.</p>
     <h1>Lessons</h1>
     <ul>
         <li><a href="lesson1.html">Lesson 1: Basic English Grammar</a></li>
