Add lesson pages with content and link them from the lessons page

--- a/lesson1.html
+++ b/lesson1.html
@@ -17,8 +17,36 @@
         </ul>
     </nav>
     <h1>Lesson 1: Basic English Grammar</h1>
-    <p>In this lesson, we will cover the basics of English grammar including parts of speech, basic tenses, and sentence structure.</p>
-    <p><strong>Source:</strong> [Provide the source if the content is not original]</p>
+    <p>In this lesson, we will cover the basics of English grammar, including parts of speech, basic tenses, and sentence structure.</p>
+    <h2>Parts of Speech</h2>
+    <p>The basic parts of speech in English are nouns, pronouns, verbs, adjectives, adverbs, prepositions, conjunctions, and interjections.</p>
+    <ul>
+        <li><strong>Nouns</strong>: words that name a person, place, thing, or idea (e.g., cat, city, happiness)</li>
+        <li><strong>Pronouns</strong>: words that replace nouns (e.g., he, she, it)</li>
+        <li><strong>Verbs</strong>: words that show action or state of being (e.g., run, is)</li>
+        <li><strong>Adjectives</strong>: words that describe nouns or pronouns (e.g., happy, large)</li>
+        <li><strong>Adverbs</strong>: words that describe verbs, adjectives, or other adverbs (e.g., quickly, very)</li>
+        <li><strong>Prepositions</strong>: words that show relationships between nouns or pronouns and other words in a sentence (e.g., in, on, at)</li>
+        <li><strong>Conjunctions</strong>: words that join words, phrases, or clauses (e.g., and, but, or)</li>
+        <li><strong>Interjections</strong>: words that express emotion (e.g., wow, ouch)</li>
+    </ul>
+    <h2>Basic Tenses</h2>
+    <p>English has three primary tenses: past, present, and future. Each tense has four aspects: simple, continuous, perfect, and perfect continuous.</p>
+    <ul>
+        <li><strong>Past Simple</strong>: I walked.</li>
+        <li><strong>Present Simple</strong>: I walk.</li>
+        <li><strong>Future Simple</strong>: I will walk.</li>
+        <li><strong>Past Continuous</strong>: I was walking.</li>
+        <li><strong>Present Continuous</strong>: I am walking.</li>
+        <li><strong>Future Continuous</strong>: I will be walking.</li>
+        <li><strong>Past Perfect</strong>: I had walked.</li>
+        <li><strong>Present Perfect</strong>: I have walked.</li>
+        <li><strong>Future Perfect</strong>: I will have walked.</li>
+        <li><strong>Past Perfect Continuous</strong>: I had been walking.</li>
+        <li><strong>Present Perfect Continuous</strong>: I have been walking.</li>
+        <li><strong>Future Perfect Continuous</strong>: I will have been walking.</li>
+    </ul>
+    <p><strong>Source:</strong> Created for educational purposes.</p>
     <a href="exercise1.html">Go to Exercise 1</a>
     <a href="game1.html">Go to Game 1</a>
 </body>
