--- a/lesson2.html
+++ b/lesson2.html
@@ -18,7 +18,25 @@
     </nav>
     <h1>Lesson 2: Vocabulary and Phrases</h1>
     <p>In this lesson, we will learn about common English vocabulary and phrases used in everyday conversations.</p>
-    <p><strong>Source:</strong> [Provide the source if the content is not original]</p>
+    <h2>Common Vocabulary</h2>
+    <p>Here are some commonly used English words and their meanings:</p>
+    <ul>
+        <li><strong>House</strong>: a building for human habitation</li>
+        <li><strong>Car</strong>: a road vehicle, typically with four wheels, powered by an internal combustion engine or electric motor</li>
+        <li><strong>Food</strong>: any nutritious substance that people or animals eat or drink or that plants absorb to maintain life and growth</li>
+        <li><strong>Water</strong>: a colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms</li>
+        <li><strong>Friend</strong>: a person whom one knows and with whom one has a bond of mutual affection</li>
+    </ul>
+    <h2>Useful Phrases</h2>
+    <p>Here are some useful phrases for everyday conversations:</p>
+    <ul>
+        <li><strong>How are you?</strong>: A common greeting used to ask about someone's well-being.</li>
+        <li><strong>Thank you</strong>: A phrase used to express gratitude.</li>
+        <li><strong>I'm sorry</strong>: A phrase used to apologize.</li>
+        <li><strong>Excuse me</strong>: A phrase used to politely get someone's attention.</li>
+        <li><strong>Can you help me?</strong>: A phrase used to ask for assistance.</li>
+    </ul>
+    <p><strong>Source:</strong> Created for educational purposes.</p>
     <a href="exercise2.html">Go to Exercise 2</a>
     <a href="game2.html">Go to Game 2</a>
 </body>
