--- a/lesson3.html
+++ b/lesson3.html
@@ -18,7 +18,24 @@
     </nav>
     <h1>Lesson 3: Pronunciation and Intonation</h1>
     <p>In this lesson, we will focus on the pronunciation and intonation patterns in English.</p>
-    <p><strong>Source:</strong> [Provide the source if the content is not original]</p>
+    <h2>Pronunciation Tips</h2>
+    <p>Here are some tips for improving your English pronunciation:</p>
+    <ul>
+        <li><strong>Listen and Repeat</strong>: Listen to native speakers and try to mimic their pronunciation.</li>
+        <li><strong>Record Yourself</strong>: Record your speech and compare it to native speakers.</li>
+        <li><strong>Use a Mirror</strong>: Practice speaking in front of a mirror to see the shape of your mouth and position of your tongue.</li>
+        <li><strong>Practice Minimal Pairs</strong>: Practice words that differ by only one sound (e.g., ship and sheep).</li>
+        <li><strong>Learn Phonetic Symbols</strong>: Learn the International Phonetic Alphabet (IPA) symbols to understand how sounds are produced.</li>
+    </ul>
+    <h2>Intonation Patterns</h2>
+    <p>Intonation is the rise and fall of the voice in speaking. Here are some common intonation patterns in English:</p>
+    <ul>
+        <li><strong>Rising Intonation</strong>: Used for yes/no questions (e.g., Are you coming?).</li>
+        <li><strong>Falling Intonation</strong>: Used for statements and commands (e.g., I am coming. Sit down.).</li>
+        <li><strong>Rising-Falling Intonation</strong>: Used for choices or alternatives (e.g., Do you want tea or coffee?).</li>
+        <li><strong>Falling-Rising Intonation</strong>: Used for uncertainty or incomplete thoughts (e.g., I'm not sure if I can go...).</li>
+    </ul>
+    <p><strong>Source:</strong> Created for educational purposes.</p>
     <a href="exercise3.html">Go to Exercise 3</a>
     <a href="game3.html">Go to Game 3</a>
 </body>
