Add images to lesson pages

--- a/lesson1.html
+++ b/lesson1.html
@@ -17,6 +17,7 @@
         </ul>
     </nav>
     <h1>Lesson 1: Basic English Grammar</h1>
+    <img src="images/grammar.png" alt="Basic English Grammar">
     <p>In this lesson, we will cover the basics of English grammar, including parts of speech, basic tenses, and sentence structure.</p>
     <h2>Parts of Speech</h2>
     <p>The basic parts of speech in English are nouns, pronouns, verbs, adjectives, adverbs, prepositions, conjunctions, and interjections.</p>
