--- a/lesson2.html
+++ b/lesson2.html
@@ -17,6 +17,7 @@
         </ul>
     </nav>
     <h1>Lesson 2: Vocabulary and Phrases</h1>
+    <img src="images/vocabulary.png" alt="Vocabulary and Phrases">
     <p>In this lesson, we will learn about common English vocabulary and phrases used in everyday conversations.</p>
     <h2>Common Vocabulary</h2>
     <p>Here are some commonly used English words and their meanings:</p>
