--- a/lesson3.html
+++ b/lesson3.html
@@ -17,6 +17,7 @@
         </ul>
     </nav>
     <h1>Lesson 3: Pronunciation and Intonation</h1>
+    <img src="images/pronunciation.png" alt="Pronunciation and Intonation">
     <p>In this lesson, we will focus on the pronunciation and intonation patterns in English.</p>
     <h2>Pronunciation Tips</h2>
     <p>Here are some tips for improving your English pronunciation:</p>
