Add exercise pages with content and link them from the exercises page

--- a/exercises.html
+++ b/exercises.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Learning</title>
+    <title>Exercises - English Learning</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,7 +16,11 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Check out our exercises that help you learn English</h1>
-    <p>List of exercises:.</p>
+    <h1>Exercises</h1>
+    <ul>
+        <li><a href="exercise1.html">Exercise 1: Basic English Grammar</a></li>
+        <li><a href="exercise2.html">Exercise 2: Vocabulary and Phrases</a></li>
+        <li><a href="exercise3.html">Exercise 3: Pronunciation and Intonation</a></li>
+    </ul>
 </body>
 </html>
