Add game pages with 2D animations

--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Learning</title>
+    <title>Games - English Learning</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,7 +16,11 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Here are our English Learning Games!</h1>
-    <p>These games are designed to assist you in your English learning journey.</p>
+    <h1>Games</h1>
+    <ul>
+        <li><a href="game1.html">Game 1: Basic English Grammar</a></li>
+        <li><a href="game2.html">Game 2: Vocabulary and Phrases</a></li>
+        <li><a href="game3.html">Game 3: Pronunciation and Intonation</a></li>
+    </ul>
 </body>
 </html>
