Adjust image sizes for games

--- a/game2.html
+++ b/game2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <style>
         .balloon {
-            width: 50px;
+            width: 100px;  /* Adjust the width to make it larger */
             position: absolute;
             bottom: 0;
             left: 50%;
