--- a/game1.html
+++ b/game1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <style>
         .character {
-            width: 100px;
+            width: 150px;  /* Adjust the width to make it larger */
             position: absolute;
             bottom: 0;
             left: 50%;
