--- a/game3.html
+++ b/game3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <style>
         .audio-icon {
-            width: 50px;
+            width: 80px;  /* Adjust the width to make it larger */
             position: absolute;
             bottom: 0;
             left: 50%;
