Adjust image sizes for games

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         </ul>
     </nav>
     <h1>Welcome to English Learning</h1>
-    <p>This website is designed to help you learn English.</p>
+    <p>The website "Learn English Fun" is designed to help learners of all ages improve their English language skills through interactive lessons, engaging exercises, fun games, and educational comics. Its target audience includes students, professionals, and anyone interested in enhancing their English proficiency in an enjoyable and effective way.</p>
 </body>
 </html>
