--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="exercises.html">Exercises</a></li>
             <li><a href="games.html">Games</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="comic.html">Contact</a></li>
         </ul>
     </nav>
     <h1>Welcome to English Learning</h1>
