--- a/lesson1.html
+++ b/lesson1.html
@@ -4,51 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 1: Basic English Grammar</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="exercises.html">Exercises</a></li>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">English Learning</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lessons.html">Lessons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercises.html">Exercises</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comic.html">Comic</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <h1>Lesson 1: Basic English Grammar</h1>
-    <img src="images/grammar.png" alt="Basic English Grammar">
-    <p>In this lesson, we will cover the basics of English grammar, including parts of speech, basic tenses, and sentence structure.</p>
-    <h2>Parts of Speech</h2>
-    <p>The basic parts of speech in English are nouns, pronouns, verbs, adjectives, adverbs, prepositions, conjunctions, and interjections.</p>
-    <ul>
-        <li><strong>Nouns</strong>: words that name a person, place, thing, or idea (e.g., cat, city, happiness)</li>
-        <li><strong>Pronouns</strong>: words that replace nouns (e.g., he, she, it)</li>
-        <li><strong>Verbs</strong>: words that show action or state of being (e.g., run, is)</li>
-        <li><strong>Adjectives</strong>: words that describe nouns or pronouns (e.g., happy, large)</li>
-        <li><strong>Adverbs</strong>: words that describe verbs, adjectives, or other adverbs (e.g., quickly, very)</li>
-        <li><strong>Prepositions</strong>: words that show relationships between nouns or pronouns and other words in a sentence (e.g., in, on, at)</li>
-        <li><strong>Conjunctions</strong>: words that join words, phrases, or clauses (e.g., and, but, or)</li>
-        <li><strong>Interjections</strong>: words that express emotion (e.g., wow, ouch)</li>
-    </ul>
-    <h2>Basic Tenses</h2>
-    <p>English has three primary tenses: past, present, and future. Each tense has four aspects: simple, continuous, perfect, and perfect continuous.</p>
-    <ul>
-        <li><strong>Past Simple</strong>: I walked.</li>
-        <li><strong>Present Simple</strong>: I walk.</li>
-        <li><strong>Future Simple</strong>: I will walk.</li>
-        <li><strong>Past Continuous</strong>: I was walking.</li>
-        <li><strong>Present Continuous</strong>: I am walking.</li>
-        <li><strong>Future Continuous</strong>: I will be walking.</li>
-        <li><strong>Past Perfect</strong>: I had walked.</li>
-        <li><strong>Present Perfect</strong>: I have walked.</li>
-        <li><strong>Future Perfect</strong>: I will have walked.</li>
-        <li><strong>Past Perfect Continuous</strong>: I had been walking.</li>
-        <li><strong>Present Perfect Continuous</strong>: I have been walking.</li>
-        <li><strong>Future Perfect Continuous</strong>: I will have been walking.</li>
-    </ul>
-    <p><strong>Source:</strong> Created for educational purposes.</p>
-    <a href="exercise1.html">Go to Exercise 1</a>
-    <a href="game1.html">Go to Game 1</a>
+    <div class="container">
+        <h1>Lesson 1: Basic English Grammar</h1>
+        <img src="images/grammar.png" alt="Basic English Grammar">
+        <p>In this lesson, we will cover the basics of English grammar, including parts of speech, basic tenses, and sentence structure.</p>
+        <h2>Parts of Speech</h2>
+        <p>The basic parts of speech in English are nouns, pronouns, verbs, adjectives, adverbs, prepositions, conjunctions, and interjections.</p>
+        <ul>
+            <li><strong>Nouns</strong>: words that name a person, place, thing, or idea (e.g., cat, city, happiness)</li>
+            <li><strong>Pronouns</strong>: words that replace nouns (e.g., he, she, it)</li>
+            <li><strong>Verbs</strong>: words that show action or state of being (e.g., run, is)</li>
+            <li><strong>Adjectives</strong>: words that describe nouns or pronouns (e.g., happy, large)</li>
+            <li><strong>Adverbs</strong>: words that describe verbs, adjectives, or other adverbs (e.g., quickly, very)</li>
+            <li><strong>Prepositions</strong>: words that show relationships between nouns or pronouns and other words in a sentence (e.g., in, on, at)</li>
+            <li><strong>Conjunctions</strong>: words that join words, phrases, or clauses (e.g., and, but, or)</li>
+            <li><strong>Interjections</strong>: words that express emotion (e.g., wow, ouch)</li>
+        </ul>
+        <h2>Basic Tenses</h2>
+        <p>English has three primary tenses: past, present, and future. Each tense has four aspects: simple, continuous, perfect, and perfect continuous.</p>
+        <ul>
+            <li><strong>Past Simple</strong>: I walked.</li>
+            <li><strong>Present Simple</strong>: I walk.</li>
+            <li><strong>Future Simple</strong>: I will walk.</li>
+            <li><strong>Past Continuous</strong>: I was walking.</li>
+            <li><strong>Present Continuous</strong>: I am walking.</li>
+            <li><strong>Future Continuous</strong>: I will be walking.</li>
+            <li><strong>Past Perfect</strong>: I had walked.</li>
+            <li><strong>Present Perfect</strong>: I have walked.</li>
+            <li><strong>Future Perfect</strong>: I will have walked.</li>
+            <li><strong>Past Perfect Continuous</strong>: I had been walking.</li>
+            <li><strong>Present Perfect Continuous</strong>: I have been walking.</li>
+            <li><strong>Future Perfect Continuous</strong>: I will have been walking.</li>
+        </ul>
+        <p><strong>Source:</strong> Created for educational purposes.</p>
+        <a href="exercise1.html">Go to Exercise 1</a>
+        <a href="game1.html">Go to Game 1</a>
+    </div>
 </body>
 </html>
