--- a/lesson2.html
+++ b/lesson2.html
@@ -4,42 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 2: Vocabulary and Phrases</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="exercises.html">Exercises</a></li>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">English Learning</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lessons.html">Lessons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercises.html">Exercises</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comic.html">Comic</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <h1>Lesson 2: Vocabulary and Phrases</h1>
-    <img src="images/vocabulary.png" alt="Vocabulary and Phrases">
-    <p>In this lesson, we will learn about common English vocabulary and phrases used in everyday conversations.</p>
-    <h2>Common Vocabulary</h2>
-    <p>Here are some commonly used English words and their meanings:</p>
-    <ul>
-        <li><strong>House</strong>: a building for human habitation</li>
-        <li><strong>Car</strong>: a road vehicle, typically with four wheels, powered by an internal combustion engine or electric motor</li>
-        <li><strong>Food</strong>: any nutritious substance that people or animals eat or drink or that plants absorb to maintain life and growth</li>
-        <li><strong>Water</strong>: a colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms</li>
-        <li><strong>Friend</strong>: a person whom one knows and with whom one has a bond of mutual affection</li>
-    </ul>
-    <h2>Useful Phrases</h2>
-    <p>Here are some useful phrases for everyday conversations:</p>
-    <ul>
-        <li><strong>How are you?</strong>: A common greeting used to ask about someone's well-being.</li>
-        <li><strong>Thank you</strong>: A phrase used to express gratitude.</li>
-        <li><strong>I'm sorry</strong>: A phrase used to apologize.</li>
-        <li><strong>Excuse me</strong>: A phrase used to politely get someone's attention.</li>
-        <li><strong>Can you help me?</strong>: A phrase used to ask for assistance.</li>
-    </ul>
-    <p><strong>Source:</strong> Created for educational purposes.</p>
-    <a href="exercise2.html">Go to Exercise 2</a>
-    <a href="game2.html">Go to Game 2</a>
+    <div class="container">
+        <h1>Lesson 2: Vocabulary and Phrases</h1>
+        <img src="images/vocabulary.png" alt="Vocabulary and Phrases">
+        <p>In this lesson, we will learn about common English vocabulary and phrases used in everyday conversations.</p>
+        <h2>Common Vocabulary</h2>
+        <p>Here are some commonly used English words and their meanings:</p>
+        <ul>
+            <li><strong>House</strong>: a building for human habitation</li>
+            <li><strong>Car</strong>: a road vehicle, typically with four wheels, powered by an internal combustion engine or electric motor</li>
+            <li><strong>Food</strong>: any nutritious substance that people or animals eat or drink or that plants absorb to maintain life and growth</li>
+            <li><strong>Water</strong>: a colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms</li>
+            <li><strong>Friend</strong>: a person whom one knows and with whom one has a bond of mutual affection</li>
+        </ul>
+        <h2>Useful Phrases</h2>
+        <p>Here are some useful phrases for everyday conversations:</p>
+        <ul>
+            <li><strong>How are you?</strong>: A common greeting used to ask about someone's well-being.</li>
+            <li><strong>Thank you</strong>: A phrase used to express gratitude.</li>
+            <li><strong>I'm sorry</strong>: A phrase used to apologize.</li>
+            <li><strong>Excuse me</strong>: A phrase used to politely get someone's attention.</li>
+            <li><strong>Can you help me?</strong>: A phrase used to ask for assistance.</li>
+        </ul>
+        <p><strong>Source:</strong> Created for educational purposes.</p>
+        <a href="exercise2.html">Go to Exercise 2</a>
+        <a href="game2.html">Go to Game 2</a>
+    </div>
 </body>
 </html>
-
