--- a/game1.html
+++ b/game1.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game 1: Basic English Grammar</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
         .character {
-            width: 150px;  /* Adjust the width to make it larger */
-            position: absolute;
+            width: 150px;
+            position: relative; /* Change from absolute to relative for proper positioning */
             bottom: 0;
             left: 50%;
             transform: translateX(-50%);
+            display: none; /* Hide the character initially */
         }
 
         @keyframes jump {
@@ -21,57 +23,80 @@
         }
 
         .jumping {
-            animation: jump 1s ease-in-out;
+            animation: jump 1s ease-in-out infinite; /* Set to infinite */
+            position: relative; /* Ensure it is relative for animation */
         }
     </style>
     <script>
         function checkAnswers() {
             var correctAnswers = ["am", "have", "goes"];
             var userAnswers = [
-                document.getElementById('q1').value,
-                document.getElementById('q2').value,
-                document.getElementById('q3').value
+                document.getElementById('q1').value.toLowerCase(),
+                document.getElementById('q2').value.toLowerCase(),
+                document.getElementById('q3').value.toLowerCase()
             ];
             var score = 0;
             for (var i = 0; i < userAnswers.length; i++) {
-                if (userAnswers[i].toLowerCase() === correctAnswers[i]) {
+                if (userAnswers[i] === correctAnswers[i]) {
                     score++;
                 }
             }
             document.getElementById('result').textContent = "You got " + score + " out of 3 correct!";
             var character = document.getElementById('character');
             if (score === 3) {
+                character.style.display = 'block'; // Show the character
                 character.classList.add('jumping');
-                setTimeout(function() {
-                    character.classList.remove('jumping');
-                }, 1000);
+            } else {
+                character.style.display = 'none'; // Hide the character if not all correct
+                character.classList.remove('jumping');
             }
         }
     </script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="exercises.html">Exercises</a></li>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">English Learning</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lessons.html">Lessons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercises.html">Exercises</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comic.html">Comic</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <h1>Game 1: Basic English Grammar</h1>
-    <form>
-        <label for="q1">I ___ happy. (am/is)</label><br>
-        <input type="text" id="q1" name="q1"><br><br>
-        <label for="q2">They ___ a cat. (have/has)</label><br>
-        <input type="text" id="q2" name="q2"><br><br>
-        <label for="q3">He ___ to school. (goes/go)</label><br>
-        <input type="text" id="q3" name="q3"><br><br>
-        <input type="button" value="Submit" onclick="checkAnswers()">
-    </form>
-    <p id="result"></p>
-    <img src="images/character.png" id="character" class="character" alt="Character">
-    <p><strong>Source:</strong> Created for educational purposes.</p>
-    <a href="lesson1.html">Back to Lesson 1</a>
+    <div class="container">
+        <h1>Game 1: Basic English Grammar</h1>
+        <form>
+            <label for="q1">I ___ happy. (am/is)</label><br>
+            <input type="text" id="q1" name="q1"><br><br>
+            <label for="q2">They ___ a cat. (have/has)</label><br>
+            <input type="text" id="q2" name="q2"><br><br>
+            <label for="q3">He ___ to school. (goes/go)</label><br>
+            <input type="text" id="q3" name="q3"><br><br>
+            <input type="button" value="Submit" onclick="checkAnswers()">
+        </form>
+        <p id="result"></p>
+        <img src="images/character.png" id="character" class="character" alt="Character">
+        <p><strong>Source:</strong> Created for educational purposes.</p>
+        <a href="lesson1.html">Back to Lesson 1</a>
+    </div>
 </body>
 </html>
