--- a/game2.html
+++ b/game2.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game 2: Vocabulary and Phrases</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
         .balloon {
-            width: 100px;  /* Adjust the width to make it larger */
-            position: absolute;
+            width: 200px; /* Increase the size */
+            position: relative; /* Change from absolute to relative for proper positioning */
             bottom: 0;
             left: 50%;
             transform: translateX(-50%);
+            display: none; /* Hide the balloon initially */
         }
 
         @keyframes float {
@@ -21,6 +23,7 @@
 
         .floating {
             animation: float 3s ease-in-out forwards;
+            position: relative; /* Ensure it is relative for animation */
         }
     </style>
     <script>
@@ -32,42 +35,67 @@
             };
             var score = 0;
             for (var word in correctMatches) {
-                var userMatch = document.getElementById(word).value;
-                if (userMatch === correctMatches[word]) {
+                var userMatch = document.getElementById(word).value.toLowerCase();
+                if (userMatch === correctMatches[word].toLowerCase()) {
                     score++;
                 }
             }
             document.getElementById('result').textContent = "You got " + score + " out of 3 correct!";
             var balloon = document.getElementById('balloon');
             if (score === 3) {
+                balloon.style.display = 'block'; // Show the balloon
                 balloon.classList.add('floating');
+            } else {
+                balloon.style.display = 'none'; // Hide the balloon if not all correct
+                balloon.classList.remove('floating');
             }
         }
     </script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="exercises.html">Exercises</a></li>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">English Learning</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lessons.html">Lessons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercises.html">Exercises</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comic.html">Comic</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <h1>Game 2: Vocabulary and Phrases</h1>
-    <form>
-        <label for="House">House:</label><br>
-        <input type="text" id="House" name="House"><br><br>
-        <label for="Car">Car:</label><br>
-        <input type="text" id="Car" name="Car"><br><br>
-        <label for="Friend">Friend:</label><br>
-        <input type="text" id="Friend" name="Friend"><br><br>
-        <input type="button" value="Submit" onclick="checkMatch()">
-    </form>
-    <p id="result"></p>
-    <img src="images/balloon.png" id="balloon" class="balloon" alt="Balloon">
-    <p><strong>Source:</strong> Created for educational purposes.</p>
-    <a href="lesson2.html">Back to Lesson 2</a>
+    <div class="container">
+        <h1>Game 2: Vocabulary and Phrases</h1>
+        <form>
+            <label for="House">House:</label><br>
+            <input type="text" id="House" name="House"><br><br>
+            <label for="Car">Car:</label><br>
+            <input type="text" id="Car" name="Car"><br><br>
+            <label for="Friend">Friend:</label><br>
+            <input type="text" id="Friend" name="Friend"><br><br>
+            <input type="button" value="Submit" onclick="checkMatch()">
+        </form>
+        <p id="result"></p>
+        <img src="images/balloon.png" id="balloon" class="balloon" alt="Balloon">
+        <p><strong>Source:</strong> Created for educational purposes.</p>
+        <a href="lesson2.html">Back to Lesson 2</a>
+    </div>
 </body>
 </html>
