--- a/game3.html
+++ b/game3.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game 3: Pronunciation and Intonation</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
         .audio-icon {
-            width: 80px;  /* Adjust the width to make it larger */
-            position: absolute;
+            width: 150px; /* Increase the size */
+            position: relative; /* Change from absolute to relative for proper positioning */
             bottom: 0;
             left: 50%;
             transform: translateX(-50%);
+            display: none; /* Hide the audio icon initially */
         }
 
         @keyframes bounce {
@@ -21,6 +23,7 @@
 
         .bouncing {
             animation: bounce 1s infinite;
+            position: relative; /* Ensure it is relative for animation */
         }
     </style>
     <script>
@@ -39,39 +42,63 @@
             document.getElementById('result').textContent = "You got " + score + " out of 2 correct!";
             var audioIcon = document.getElementById('audio-icon');
             if (score === 2) {
+                audioIcon.style.display = 'block'; // Show the audio icon
                 audioIcon.classList.add('bouncing');
+            } else {
+                audioIcon.style.display = 'none'; // Hide the audio icon if not all correct
+                audioIcon.classList.remove('bouncing');
             }
         }
     </script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="exercises.html">Exercises</a></li>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">English Learning</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lessons.html">Lessons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercises.html">Exercises</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comic.html">Comic</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <h1>Game 3: Pronunciation and Intonation</h1>
-    <p>Listen to the audio and choose the correct intonation pattern:</p>
-    <form>
-        <label for="question1">Are you coming?</label><br>
-        <input type="radio" id="rising1" name="intonation1" value="rising">
-        <label for="rising1">Rising</label><br>
-        <input type="radio" id="falling1" name="intonation1" value="falling">
-        <label for="falling1">Falling</label><br><br>
-        <label for="question2">I am coming.</label><br>
-        <input type="radio" id="rising2" name="intonation2" value="rising">
-        <label for="rising2">Rising</label><br>
-        <input type="radio" id="falling2" name="intonation2" value="falling">
-        <label for="falling2">Falling</label><br><br>
-        <input type="button" value="Submit" onclick="checkIntonation()">
-    </form>
-    <p id="result"></p>
-    <img src="images/audio-icon.png" id="audio-icon" class="audio-icon" alt="Audio Icon">
-    <p><strong>Source:</strong> Created for educational purposes.</p>
-    <a href="lesson3.html">Back to Lesson 3</a>
+    <div class="container">
+        <h1>Game 3: Pronunciation and Intonation</h1>
+        <form>
+            <label for="question1">Are you coming?</label><br>
+            <input type="radio" id="rising1" name="intonation1" value="rising">
+            <label for="rising1">Rising</label><br>
+            <input type="radio" id="falling1" name="intonation1" value="falling">
+            <label for="falling1">Falling</label><br><br>
+            <label for="question2">I am coming.</label><br>
+            <input type="radio" id="rising2" name="intonation2" value="rising">
+            <label for="rising2">Rising</label><br>
+            <input type="radio" id="falling2" name="intonation2" value="falling">
+            <label for="falling2">Falling</label><br><br>
+            <input type="button" value="Submit" onclick="checkIntonation()">
+        </form>
+        <p id="result"></p>
+        <img src="images/audio-icon.png" id="audio-icon" class="audio-icon" alt="Audio Icon">
+        <p><strong>Source:</strong> Created for educational purposes.</p>
+        <a href="lesson3.html">Back to Lesson 3</a>
+    </div>
 </body>
 </html>
