--- a/lesson3.html
+++ b/lesson3.html
@@ -4,40 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 3: Pronunciation and Intonation</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="exercises.html">Exercises</a></li>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">English Learning</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lessons.html">Lessons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercises.html">Exercises</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comic.html">Comic</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <h1>Lesson 3: Pronunciation and Intonation</h1>
-    <img src="images/new_pronunciation.png" alt="Pronunciation and Intonation">
-    <p>In this lesson, we will focus on the pronunciation and intonation patterns in English.</p>
-    <h2>Pronunciation Tips</h2>
-    <p>Here are some tips for improving your English pronunciation:</p>
-    <ul>
-        <li><strong>Listen and Repeat</strong>: Listen to native speakers and try to mimic their pronunciation.</li>
-        <li><strong>Record Yourself</strong>: Record your speech and compare it to native speakers.</li>
-        <li><strong>Use a Mirror</strong>: Practice speaking in front of a mirror to see the shape of your mouth and position of your tongue.</li>
-        <li><strong>Practice Minimal Pairs</strong>: Practice words that differ by only one sound (e.g., ship and sheep).</li>
-        <li><strong>Learn Phonetic Symbols</strong>: Learn the International Phonetic Alphabet (IPA) symbols to understand how sounds are produced.</li>
-    </ul>
-    <h2>Intonation Patterns</h2>
-    <p>Intonation is the rise and fall of the voice in speaking. Here are some common intonation patterns in English:</p>
-    <ul>
-        <li><strong>Rising Intonation</strong>: Used for yes/no questions (e.g., Are you coming?).</li>
-        <li><strong>Falling Intonation</strong>: Used for statements and commands (e.g., I am coming. Sit down.).</li>
-        <li><strong>Rising-Falling Intonation</strong>: Used for choices or alternatives (e.g., Do you want tea or coffee?).</li>
-        <li><strong>Falling-Rising Intonation</strong>: Used for uncertainty or incomplete thoughts (e.g., I'm not sure if I can go...).</li>
-    </ul>
-    <p><strong>Source:</strong> Created for educational purposes.</p>
-    <a href="exercise3.html">Go to Exercise 3</a>
-    <a href="game3.html">Go to Game 3</a>
+    <div class="container">
+        <h1>Lesson 3: Pronunciation and Intonation</h1>
+        <img src="images/new_pronunciation.png" alt="Pronunciation and Intonation">
+        <p>In this lesson, we will focus on pronunciation and intonation patterns in English.</p>
+        <h2>Pronunciation Tips</h2>
+        <p>Here are some tips for improving your English pronunciation:</p>
+        <ul>
+            <li><strong>Listen and Repeat</strong>: Listen to native speakers and try to mimic their pronunciation.</li>
+            <li><strong>Record Yourself</strong>: Record your speech and compare it to native speakers.</li>
+            <li><strong>Use a Mirror</strong>: Practice speaking in front of a mirror to see the shape of your mouth and position of your tongue.</li>
+            <li><strong>Practice Minimal Pairs</strong>: Practice words that differ by only one sound (e.g., ship and sheep).</li>
+            <li><strong>Learn Phonetic Symbols</strong>: Learn the International Phonetic Alphabet (IPA) symbols to understand how sounds are produced.</li>
+        </ul>
+        <h2>Intonation Patterns</h2>
+        <p>Intonation is the rise and fall of the voice in speaking. Here are some common intonation patterns in English:</p>
+        <ul>
+            <li><strong>Rising Intonation</strong>: Used for yes/no questions (e.g., Are you coming?).</li>
+            <li><strong>Falling Intonation</strong>: Used for statements and commands (e.g., I am coming. Sit down.).</li>
+            <li><strong>Rising-Falling Intonation</strong>: Used for choices or alternatives (e.g., Do you want tea or coffee?).</li>
+            <li><strong>Falling-Rising Intonation</strong>: Used for uncertainty or incomplete thoughts (e.g., I'm not sure if I can go...).</li>
+        </ul>
+        <p><strong>Source:</strong> Created for educational purposes.</p>
+        <a href="exercise3.html">Go to Exercise 3</a>
+        <a href="game3.html">Go to Game 3</a>
+    </div>
 </body>
 </html>
